k8s_demo/deploy/react-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: jobfinder-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jobfinder-ui
  template:
    metadata:
      labels:
        app: jobfinder-ui
    spec:
      containers:
      - name: jobfinder-ui-cont
        image: radomkhoem/jobfinder:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jobfinder-svc
spec:
  type: ClusterIP
  selector:
    app: jobfinder-ui  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30002
