k8s_demo/deploy/medical-appointment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-app
  namespace: medical-appointment
  labels:
    app: medical-app
    environment: production
  annotations:
    description: "Deployment for Medical API"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: medical-app
  template:
    metadata:
      labels:
        app: medical-app
    spec:
      containers:
        - name: medical
          image: radomkhoem/medical_appointment_app:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: token-keys
              mountPath: /app/keys
            - name: file-server-path
              mountPath: /opt/app/media/images/
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: token-keys
          nfs:
            server: 35.240.198.147
            path: /opt/nfs/data/token-keys
        - name: file-server-path
          nfs:
            server: 35.240.198.147
            path: /opt/nfs/data/file-server-path

---
apiVersion: v1
kind: Service
metadata:
  name: medical-service
  namespace: medical-appointment
  labels:
    app: medical-app
spec:
  type: ClusterIP
  selector:
    app: medical-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medical-ingress
  namespace: medical-appointment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - staging-medical-appointment.radom-kh.site
      secretName: medical-tls
  rules:
    - host: staging-medical-appointment.radom-kh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medical-service
                port:
                  number: 8080
